@@ -16,6 +16,7 @@ Version 1.0.xxx (June xxth 2013)
 - Fixed: CM119/160/180 Energy Usage values
 - Implemented: Initial language translation
 - Implemented: German language support (thanks to the community!)
+- Fixed: Hardware Setup, the selected existing hardware could not match with the hardware type dropdown
 
 Version 1.0.666 (May 28th 2013)
 - Implemented: Settings, Doorbell could be send as 'Group On' or 'On' command
